--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SJ Restaurant</title>
+    <title>WebEats</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
@@ -31,7 +31,7 @@
           <li><a href="#testimonials">Testimonial</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
-        <h1 class="logo">SJ</h1>
+        <h1 class="logo">WebEats</h1>
       </div>
     </nav>
     <section class="showcase-area" id="showcase">
